Simplify groovy() in apply-ng.
Most params seem not to be necessary in our use case.